Prepare site for all

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://farmanullah22.github.io/Eng.Farman_Ullah-Portfolio",
+  "homepage": "https://farmanullah22.github.io/Farman",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "start": "vite"
   },
   "dependencies": {
